--- a/express-app/Dockerfile
+++ b/express-app/Dockerfile
@@ -1,7 +1,17 @@
+# Use the Node.js LTS image as a base
 FROM node:lts
 
-RUN npm install nodemon -g
+# Copy app source
+COPY . /src
 
+# Set working directory to /src
 WORKDIR /src
-ADD package.json package.json
+
+# Install app dependencies
 RUN npm install
+
+# Expose port to outside world
+EXPOSE 3000
+
+# Start command as per the package.json file
+CMD ["npm", "start"]
