--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mapbox/node-pre-gyp": "^1.0.11",
+    "canvas": "^2.11.2",
+    "colorthief": "^2.2.0",
     "react": "^18.2.0",
+    "react-color-extractor": "^1.1.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-tinder-card": "^1.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
