--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,7 +19,8 @@
     "react-color-extractor": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-tinder-card": "^1.6.2"
+    "react-tinder-card": "^1.6.2",
+    "switch": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
